# raytracer

./: .gitignore  CMakeLists.txt  justfile
source/: main.cpp
src/: CMakeLists.txt  macros.hpp  main.cpp  ray.hpp  vec3.hpp
tests/: CMakeLists.txt  test_vec3.cpp
